feat: redis、kafka init complete